# bisect_example

./: README.md  main.py  pyproject.toml  test_main.py
